# obs-noice

./: .clang-format  .gitignore  CMakeLists.txt  README.md  buildspec.json  buildspec27.json  formatcode.sh
.github/actions/build-plugin/: action.yml
.github/scripts/: .build.zsh  .package.zsh  Build-Windows.ps1  Package-Windows.ps1  check-cmake.sh  check-format.sh
.github/scripts/utils.pwsh/: Setup-Obs.ps1
.github/scripts/utils.zsh/: check_macos  check_packages  setup_linux  setup_macos  setup_obs
.github/workflows/: main.yml
cmake/: ObsPluginHelpers.cmake  QtHelper.cmake
cmake/bundle/macos/: Plugin-Info.plist.in  installer-macos.pkgproj.in
cmake/bundle/windows/: installer-Windows.iss.in
data/: package.json  regions.json  services.json
data/locale/: en-US.ini
source/: auth.cpp  auth.hpp  common.cpp  common.hpp  game.cpp  game.hpp  noice-bridge.cpp  noice-bridge.hpp  noice-validator.cpp  noice-validator.hpp  obs-bridge.cpp  obs-bridge.hpp  plugin.cpp  scene-tracker.cpp  scene-tracker.hpp  version.h.in
source/obs/: obs-source-factory.hpp  obs-source.hpp
source/util/: util-curl.cpp  util-curl.hpp  util.hpp
ui/: CMakeLists.txt  ui-dock-chat.cpp  ui-dock-chat.hpp  ui-dock-eventlist.cpp  ui-dock-eventlist.hpp  ui-dock-stats.cpp  ui-dock-stats.hpp  ui-frame-stats.cpp  ui-frame-stats.hpp  ui-plugin.cpp  ui.cpp  ui.hpp
ui/data/locale/: en-US.ini
ui/obs/: obs-browser.cpp  obs-browser.hpp
